# WWL-grakel

./: .gitignore  README.md  pyproject.toml
examples/: example.py  mutag.py
outputs/: wl_hamming_embeddings_h2.npy
wwl_grakel/: __init__.py  kernel.py  utils.py
